# lets-go-there

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  destination.py  travel_idea.py  travel_idea_group.py  travel_idea_group_invitation.py  user.py
app/core/: auth.py  config.py  dependencies.py  security.py  validation.py
app/database/: dependencies.py  init_db.py
app/models/: __init__.py  destination.py  travel_idea.py  travel_idea_group.py  travel_idea_group_invitation.py  travel_idea_group_member.py  user_account.py
app/schemas/: destination.py  enums.py  shared.py  travel_idea.py  travel_idea_group.py  travel_idea_group_invitation.py  user.py
app/services/: destination.py  destination_service.py  travel_idea.py  travel_idea_group.py  travel_idea_group_invitation.py  travel_idea_group_member.py  user_account.py
migrations/: env.py
migrations/versions/: 2025_11_09_0024-020e6a620225_create_destination_table.py  2025_11_17_2033-9c7a6c45d455_add_user_account_table.py  2025_11_18_2248-9ce108863dbf_re_name_destination_table_and_add_new_.py  2025_11_19_2145-e1b007ed5bae_add_travel_idea_group_and_travel_idea_.py  2025_12_02_1937-8af9c0dba3d0_add_travel_idea_group_invitation_table.py  2025_12_08_2316-5e3b78147a7d_remove_password_hash_on_user_account.py
tests/: conftest.py  factory.py  test_destination.py  test_health.py  test_travel_idea.py  test_travel_idea_group.py  test_travel_idea_group_invitation.py  test_user_account.py
